--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -6,3 +6,5 @@ eureka.client.registryFetchIntervalSeconds = 5
 
 zuul.routes.order-service.path=/order-service/**
 zuul.routes.order-service.sensitive-headers=Set-Cookie,Authorization
+
+eureka.client.service-url.defaultZone=http://admin:admin@localhost:8761/eureka/
