--- a/order-service-prod.properties
+++ b/order-service-prod.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://172.17.0.2:3306/invilliaDB?createDatabaseIfNo
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.username=invillia
 spring.datasource.password=invillia
+
+eureka.client.service-url.defaultZone=http://admin:admin@localhost:8761/eureka/
