--- a/order-service-docker.properties
+++ b/order-service-docker.properties
@@ -2,7 +2,7 @@
 server.port=8181
 
 spring.jpa.hibernate.ddl-auto = validate
-spring.datasource.url=jdbc:mysql://container-invillia-mysql:3306/invilliaDB?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb-order-service:3306/invilliaDB?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.username=invillia
 spring.datasource.password=invillia
