--- a/order-service-dev.properties
+++ b/order-service-dev.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:file:~/invillia
 spring.datasource.username=sa
 spring.datasource.password=
+
+eureka.client.service-url.defaultZone=http://admin:admin@localhost:8761/eureka/
