--- a/store-service-dev.properties
+++ b/store-service-dev.properties
@@ -4,7 +4,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:h2:file:~/invillia
+spring.datasource.url=jdbc:h2:file:~/invillia-store
 spring.datasource.username=sa
 spring.datasource.password=
 
