--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -7,4 +7,7 @@ eureka.client.registryFetchIntervalSeconds = 5
 zuul.routes.order-service.path=/order-service/**
 zuul.routes.order-service.sensitive-headers=Set-Cookie,Authorization
 
+zuul.routes.store-service.path=/store-service/**
+zuul.routes.store-service.sensitive-headers=Set-Cookie,Authorization
+
 eureka.client.service-url.defaultZone=http://admin:admin@localhost:8761/eureka/
